# SQLite-python-database

./: .pre-commit-config.yaml  README.md  make-app-db.sh  make-test-db.sh  number-guessing-client.py  number-guessing-server.py  number_guessing_DBsetup.py  number_guessing_client.py  number_guessing_server.py  prisma-database.py  prisma.schema  prisma.test.schema  prisma_database.py  pyproject.toml  pyproject.txt  requirements.txt  schema.prisma  test_prisma.py  test_server.py
config/: datasource.app.def  datasource.test.def  db_schema.def  generator.app.def  generator.test.def
tests/: generate_test_db.py  test_prisma.py
