[tool.poetry]
name = "sqlite-python-database"
version = "0.1.0"
description = ""
authors = ["Michal Maněna <michal.manena@gmail.com>"]
readme = "README.md"
packages = [{include = "sqlite_python_database"}]

[tool.poetry.dependencies]
python = "^3.11"
prisma = "^0.9.1"
aiohttp = "^3.8.5"


[tool.poetry.group.dev.dependencies]
isort = "^5.12.0"
black = "^23.7.0"
pylint = "^2.17.5"
pre-commit = "^3.3.3"
pytest = "^7.4.0"
pytest-asyncio = "^0.21.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"


[tool.pylint.MASTER]
extension-pkg-whitelist = []
max-args = 6

[tool.pylint.'MESSAGES CONTROL']
disable = [
    "fixme",
    "missing-function-docstring",
    "missing-class-docstring",
    "missing-module-docstring"
]
