[tool.poetry]
name = "number-guessing-new"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.9,<3.13"
pytest = "^8.0.0"
aiohttp = "^3.8.5"
aiosignal = "^1.3.1"
async = "^0.6.2"
attrs = "^23.1.0"
beautifulsoup4 = "^4.12.2"
certifi = "^2023.7.22"
frozenlist = "^1.4.0"
charset-normalizer = "^3.2.0"
idna = "^3.4"
multidict = "^6.0.4"
mysql = "^0.0.3"
#mysqlclient = "^2.2.0"
#mysql-connector-python = "^8.1.0"
#pip = "^23.2.1"
protobuf = "^4.21.12"
PySide6 = "^6.5.2"
PySide6-Addons = "^6.5.2"
PySide6-Essentials = "^6.5.2"
requests = "^2.31.0"
setuptools = "^65.5.0"
# shiboken6 = "^6.5.2"
soupsieve = "^2.4.1"
urllib3 = "^2.0.4"
yarl = "^1.9.2"
tomlkit = "^0.12.5"
pydantic = "^2.7.1"
pydantic-settings = "^2.2.1"
prisma = "^0.13.1"

[tool.poetry.group.dev.dependencies]
python = "^3.11"
pytest = "^8.0.0"
aiohttp = "^3.8.5"
aiosignal = "^1.3.1"
async = "^0.6.2"
attrs = "^23.1.0"
beautifulsoup4 = "^4.12.2"
certifi = "^2023.7.22"
frozenlist = "^1.4.0"
charset-normalizer = "^3.2.0"
idna = "^3.4"
multidict = "^6.0.4"
#mysql = "^0.0.3"
#mysqlclient = "^2.2.0"
#mysql-connector-python = "^8.1.0"
#pip = "^23.2.1"
protobuf = "^4.21.12"
#PySide6 = "^6.5.2"
#PySide6-Addons = "^6.5.2"
#PySide6-Essentials = "^6.5.2"
requests = "^2.31.0"
setuptools = "^65.5.0"
# shiboken6 = "^6.5.2"
soupsieve = "^2.4.1"
urllib3 = "^2.0.4"
yarl = "^1.9.2"
pytest-asyncio = "^0.23.6"
pytest-aiohttp = "^1.0.5"

[tool.pytest.ini_options]
asyncio_mode = "auto"

testpaths = [
    "tests",
]

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
